Fix spacing on buttons

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .main-wrapper {
@@ -175,11 +175,13 @@
   display: grid;
   justify-self: end;
   grid-template-columns: 1fr 1fr 1fr;
+  padding-right: 2rem;
+  gap: 1rem;
 }
 
 .tophead-btn {
   border-radius: 50px;
-  margin: 1.2rem 0.7rem;
+  margin: 1.2rem 0;
   background-color: rgb(0, 144, 254);
   color: white;
   width: 6rem;
